--- a/css/index.css
+++ b/css/index.css
@@ -38,75 +38,6 @@ a:hover {
   font-style: 'ヒラギノ角ゴ Pro W3',Hiragino Kaku Gothic Pro;
 }
 
-/* ---------------------------------------- レイアウトに関する指定 */
-
-
-#wrapper {
-  height: 100%;
-}
-
-/*-----------------------------------幅が770px以下の場合*/
-
-@media only screen and (max-width: 770px) {
-
-		#map {
-		  /*border: 3px #000000 solid;*/
-		  position: relative;
-		  /*padding-bottom: 60%;
-		  padding-top: 10%;*/
-		  margin: 0 auto;
-		  height: 100%;
-		  width: 100%;
-		  overflow: hidden;
-		}
-
-		#map iframe,
-		#map object,
-		#map embed {
-		  position: absolute;
-		  top: 0%;
-		  left: 0%;
-      height: 100% !important;
-      width: 100% !important;
-		}
-
-}
-
-/*-----------------------------------幅が770pxを超えた場合*/
-
-@media screen and (min-width: 770px){
-
-#map {
-  /*border: 1px #000000 solid;*/
-  position: relative;
-  /*padding-bottom: 90%;*/
-  margin: 0 auto;
-  height: 100%;
-  width: 100%;
-  overflow: hidden;
-}
-
-#map iframe,
-#map object,
-#map embed {
-  position: absolute;
-  top: 0px;
-  left: 0;
-  height: 100% !important;
-  width: 100% !important;
-}
-
-#imgs {
-  height: 50%;
-  align: center;
-}
-
-}
-/*------------------------トップへ戻る*/
-
-#back {
-  text-align: right;
-  margin: 0 auto;
-  height: 5%;
-  width: 80%;
+#img{
+  width:500px;
 }
